[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.9"
env_logger = "0.11.3"
file-rotate = "0.7.6"
log = "0.4.22"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
